--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-react": "^7.28.0",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "reflect-metadata": "^0.1.13",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
@@ -29,9 +33,17 @@
     "@types/react-dom": "17.0.14",
     "@types/styled-components": "^5.1.24",
     "babel-loader": "^8.2.4",
-    "eslint": "8.12.0",
+    "eslint": "^7.32.0",
     "eslint-config-next": "12.1.4",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-storybook": "^0.5.7",
     "typescript": "4.6.3"
+  },
+  "_moduleAliases": {
+    "@components/*": "components/*",
+    "@pages/*": "pages/*",
+    "@styles/*": "styles/*",
+    "@types": "types/index"
   }
 }
