--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-storybook": "^0.5.7",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "4.6.3"
   },
   "_moduleAliases": {
