--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "test": "jest"
+    "test": "jest --runInBand"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.18.0",
